# jinja-parser

./: README.md
api/: pyproject.toml
api/api/: main.py
web/: package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
